# concrete-crack-cnn-vs-vit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.yaml  config_seg.yaml
configs/aug/: heavy.yaml  light.yaml  medium.yaml
configs/dataset/: crackseg9k.yaml  sdnet2018.yaml
configs/model/: convnext_tiny.yaml  deit_small.yaml  efficientnetv2_s.yaml  resnet50.yaml  swin_tiny.yaml  unet_convnext_tiny.yaml  unet_efficientnetv2_s.yaml  unet_resnet50.yaml  unet_swin_tiny.yaml  vit_b16.yaml
configs/splits/: crackseg9k_split.json  sdnet2018_split.json
configs/training/: default.yaml
dashboard/: index.html  tickets.yaml
scripts/: 00_hello_pytorch.py  01_explore_timm.py  02_hello_lightning.py  03_hello_mlflow.py  04_smoke_test_data.py  dashboard.py  evaluate.py  train.py  train_seg.py
src/data/: __init__.py  augmentation.py  classification_dataset.py  classification_dm.py  segmentation_dataset.py  segmentation_dm.py  split.py
src/models/: classification_module.py  segmentation_module.py
src/utils/: tracking.py
tests/: conftest.py  test_classification_data.py  test_evaluate.py  test_integration.py  test_segmentation_data.py  test_segmentation_module.py  test_train_cls.py
